tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_imports_errors_if_using_alias_in_import/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: bar is a type alias, not a module
  ┌─ src/main.nr:6:14
  │
6 │     use foo::bar::baz;
  │              ---
  │

Aborting due to 1 previous error
